<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnIrAListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_a_listado"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bntIrAComponentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_a_componentes"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/btnIrAListado"
        app:layout_constraintStart_toStartOf="@+id/btnIrAListado"
        app:layout_constraintTop_toBottomOf="@+id/btnIrAListado" />

    <Button
        android:id="@+id/btnIrAGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_a_google"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/bntIrAComponentes"
        app:layout_constraintStart_toStartOf="@+id/bntIrAComponentes"
        app:layout_constraintTop_toBottomOf="@+id/bntIrAComponentes" />

</androidx.constraintlayout.widget.ConstraintLayout>