<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <TextView
        android:id="@+id/tvEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equipo"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCopasNacionales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copas_nacionales"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="@+id/tvEquipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEquipo" />

    <TextView
        android:id="@+id/tvCopasInternacionales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copas_internacionales"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="@+id/tvCopasNacionales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCopasNacionales" />

</androidx.constraintlayout.widget.ConstraintLayout>